# McGill-Robotics-AUV-Control-System

./: README.md
controls/: CMakeLists.txt  controlsParameters.yaml  gains.yaml  package.xml  sim_gains.yaml
controls/include/: controls.h  invert_matrix.h  thrust_mapper.h
controls/launch/: controls.launch  sim_controls.launch
controls/msg/: DebugControls.msg  VectorPID.msg  motorCommands.msg
controls/src/: README.md  controls.cpp  thrust_mapper.cpp
